added second table with colspan and rowspan

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -21,5 +21,21 @@
       <td>1000000000000000</td>
     </tr>
   </table>
+
+   <table border=1>
+    <tr>
+      <th>Customer</th>
+      <th>Items Selected</th>
+      <th>Items Purchased</th>
+    </tr>
+    <tr>
+      <td colspan="2">Nancy</td>
+      <td rowspan="2">Schmancy</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>10</td>
+    </tr>
+  </table>
 </body>
 </html>
