add semantic html structure

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -5,5 +5,79 @@
 </head>
 <body>
 
+  <header>
+
+    <h1>
+      <!-- title of page -->
+    </h1>
+
+    <nav>
+      <!-- menu -->
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </nav>
+
+  </header>
+
+  <main>
+
+    <article>
+
+      <h2>
+        <!-- title of article -->
+      </h2>
+      <section>
+        <!-- intro -->
+      </section>
+
+      <section>
+        <h3>
+          <!-- title of section -->
+        </h3>
+      </section>
+
+            <section>
+        <h3>
+          <!-- title of section -->
+        </h3>
+      </section>
+
+    </article>
+
+    <article>
+
+      <h2>
+        <!-- title of article -->
+      </h2>
+      <section>
+        <!-- intro -->
+      </section>
+
+      <aside>
+        <!-- pullquote -->
+      </aside>
+
+      <section>
+        <h3>
+          <!-- title of section -->
+        </h3>
+      </section>
+
+            <section>
+        <h3>
+          <!-- title of section -->
+        </h3>
+      </section>
+
+    </article>
+
+  </main>
+
+  <footer>
+  </footer>
+
 </body>
 </html>
