add table to index.html

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -64,6 +64,24 @@ clowns. I don't have time for their judgment and their stupidity and ....
 must speak of the Vatican assassins.</p>
       </section>
 
+<!-- TABLE OF ARTICLE 1 CONTENT -->
+      <table>
+        <tr>
+          <th>Charlie</th>
+          <th>sheriff</th>
+          <th>cup of coffee</th>
+        </tr>
+        <tr>
+          <td rowspan="2">clowns</td>
+          <td>judgement</td>
+          <td>stupidity</td>
+        </tr>
+        <tr>
+          <td>surrender</td>
+          <td>sober</td>
+        </tr>
+      </table>
+
     </article>
 <!-- END ARTICLE 1 -->
 
