add images and link stylesheet to index.html

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <title>dress the octopus</title>
+
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 
   <img src="octopus.png" alt="octopus">
+  <img src="hat.png" alt="hat">
+  <img src="glasses.png" alt="glasses">
 
 </body>
 </html>
