horizontally center octopus

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-  <img src="octopus.png" alt="octopus">
-  <img src="hat.png" alt="hat">
-  <img src="glasses.png" alt="glasses">
+  <img src="octopus.png" alt="octopus" id="octopus">
+  <img src="hat.png" alt="hat" id="hat">
+  <img src="glasses.png" alt="glasses" id="glasses">
 
 </body>
 </html>
