--- a/web_dev/jquery/index.html
+++ b/web_dev/jquery/index.html
@@ -1,8 +1,23 @@
 <!doctype HTML>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <html>
+
+    <section>
+      <h1>The News</h1>
+      <div id="first-block" class="block"></div>
+      <div id="second-block" class="block"></div>
+      <div id="third-block" class="block"></div>
+    </section>
+
+    <section>
+      <h2>A New President Was Elected</h2>
+      <article></article>
+      <h2>Everything Else</h2>
+      <article></article>
+    </section>
 
     <script src="js/main.js"></script>
   </html>
