--- a/web_dev/jquery/index.html
+++ b/web_dev/jquery/index.html
@@ -7,18 +7,22 @@
 
     <section>
       <h1>The News</h1>
-      <div id="first-block" class="block"></div>
-      <div id="second-block" class="block"></div>
-      <div id="third-block" class="block"></div>
+      <h3 id="swatch-control">Click me to change color theme of page</h3>
+      <div id="swatches">
+        <div id="first-block" class="block"></div>
+        <div id="second-block" class="block"></div>
+        <div id="third-block" class="block"></div>
+      </div>
     </section>
 
-    <section>
+    <section id="articles">
       <h2>A New President Was Elected</h2>
-      <article></article>
+      <article>Ugh</article>
       <h2>Everything Else</h2>
-      <article></article>
+      <article>Ack</article>
     </section>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
   </html>
 </html>
